<resources>
    <string name="app_name">WEX client</string>
    <string name="AccountInfo">My Funds</string>
    <string name="UpdateAccountInfo">Please press \"UPDATE\"</string>
    <string name="enableEMAIndicator">Show EMA</string>
    <string name="enableMACDIndicator">Show MACD</string>
    <string name="enableRSIIndicator">Show RSI</string>
    <string name="enableSMAIndicator">Show SMA</string>
    <string name="IndicatorsSectionTitle">Indicators</string>
    <string name="SaveSettingsButton">SAVE SETTINGS</string>
    <string name="SelectPairsPromptTitle">Pairs to display</string>
    <string name="FundsInfoUpdatedtext">Account info was successfully updated</string>
    <string name="DialogSaveButton">SAVE</string>
    <string name="RefreshButton">REFRESH</string>
    <string name="AddWatcherTitle">Add watcher</string>
    <string name="OoopsError">Ooops</string>
    <string-array name="NavSections">
        <item>Dashboard</item>
        <item>Orders Book</item>
        <item>My Active Orders</item>
        <item>My Trades</item>
        <item>My Transactions</item>
        <item>Charts</item>
        <item>Chat</item>
        <item>Settings</item>
        <item>Watchers</item>
        <item>Help</item>
    </string-array>
    <string-array name="Periods">
        <item>30s</item>
        <item>1m</item>
        <item>2m</item>
        <item>3m</item>
        <item>5m</item>
        <item>10m</item>
        <item>15m</item>
        <item>20m</item>
        <item>30m</item>
        <item>45m</item>
        <item>1h</item>
    </string-array>
    <string-array name="PeriodsInMsecs">
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1200000</item>
        <item>1800000</item>
        <item>2700000</item>
        <item>3600000</item>
    </string-array>
    <string name="period_default_value">60000</string>
    <string-array name="ExchangePairs" translatable="false">
        <item>BTC/USD</item>
        <item>BTC/RUR</item>
        <item>BTC/EUR</item>
        <item>LTC/BTC</item>
        <item>LTC/USD</item>
        <item>LTC/RUR</item>
        <item>LTC/EUR</item>
        <item>NMC/BTC</item>
        <item>NMC/USD</item>
        <item>NVC/BTC</item>
        <item>NVC/USD</item>
        <item>USD/RUR</item>
        <item>EUR/USD</item>
        <item>EUR/RUR</item>
        <item>PPC/BTC</item>
        <item>PPC/USD</item>
        <item>DSH/BTC</item>
        <item>DSH/USD</item>
        <item>DSH/RUR</item>
        <item>DSH/EUR</item>
        <item>DSH/LTC</item>
        <item>DSH/ETH</item>
        <item>ETH/BTC</item>
        <item>ETH/USD</item>
        <item>ETH/EUR</item>
        <item>ETH/LTC</item>
        <item>ETH/RUR</item>
        <item>BCH/USD</item>
        <item>BCH/BTC</item>
        <item>USDET/USD</item>
        <item>RURET/RUR</item>
        <item>EURET/EUR</item>
        <item>BTCET/BTC</item>
        <item>LTCET/LTC</item>
        <item>ETHET/ETH</item>
        <item>NMCET/NMC</item>
        <item>NVCET/NVC</item>
        <item>PPCET/PPC</item>
        <item>DSHET/DSH</item>
        <item>BCHET/BCH</item>
    </string-array>
    <string name="watcher_panic_sell">Panic Sell</string>
    <string name="watcher_panic_buy">Panic Buy</string>
    <string name="watcher_stop_loss">Stop-loss</string>
    <string name="watcher_take_profit">Take-profit</string>
    <string name="watcher_value_delta">Delta (%)</string>
    <string name="watcher_value_number">Value</string>
    <string name="watcher_alarm">%1$s for %2$s</string>
    <string name="watcher_alarm_panic_sell_details">%1$s dropped more than %2$s%%</string>
    <string name="watcher_alarm_panic_buy_details">%1$s raised more than %2$s%%</string>
    <string name="watcher_alarm_stop_loss_details">%1$s went below %2$s %3$s</string>
    <string name="watcher_alarm_take_profit_details">%1$s went above %2$s %3$s</string>
    <string name="AboutText"><![CDATA[<b>Used libraries: </b><br />StockChartView (<a href=\"http://www.stockchartview.org\">http://stockchartview.org</a>)
    <br />GSON (<a href=\"https://github.com/google/gson\">https://github.com/google/gson</a>)
    <br />jsoup (<a href=\"https://jsoup.org\">https://jsoup.org</a>)
    <br /><br />
    <b>Useful hints:</b><br /> Tap on any price at the <b>Dashboard</b> and <b>Trading</b> fields will be automatically populated with this price and corresponding currencies
    <br /><br /> Tap on any fund value at <b>My Funds</b> section and <b>Amount</b> field at the <b>Trading</b> section will be automatically populated<br /><br /> <b>Why chat is displayed in \"read-only\" mode?</b> Unfortunately, WEX API doesn\'t have any methods to work with chat,
     so that is why chat is being loaded from web-page in guest mode.<br /><br />
    Authors of this app are not affiliated with WEX exchange]]></string>
    <string name="StopLossDescription">You will be notified once the price get below the specified value</string>
    <string name="TakeProfitDescription">You will be notified once the price get above the specified value</string>
    <string name="PanicBuyDescription">You will be notified once the last check price is more than previous check price on the specified delta</string>
    <string name="PanicSellDescription">You will be notified once the last check price is less than previous check price on the specified delta</string>
    <string name="TradeTitle">Trading</string>
    <string name="EnableRecurrentCheck">Enable periodic check</string>
    <string name="RecurrentPeriod">Period:</string>
    <string name="ChoosePeriod">Choose period</string>
    <string name="general_error_text">Something went wrong. Please try again later.</string>
    <string name="WidgetConfigTitle">Please choose pair to watch</string>
    <string name="PlaceholderText">Placeholder text</string>
    <string name="PairTitleWidget">Pair</string>
    <string name="NATitle">N/A</string>
    <string name="DateTitle">Date</string>
    <string name="KeyTitle">Key</string>
    <string name="PairTitle">Pair:</string>
    <string name="NoItems">NO ITEMS</string>
    <string name="NotifyMeOn">Notify me on</string>
    <string name="ZeroFloatValue">0.0</string>
    <string name="Bids">BIDS</string>
    <string name="Asks">ASKS</string>
    <string name="SettingsSecretTitle">Secret</string>
    <string name="StartDateTitle">Start Date</string>
    <string name="EndDateTitle">End Date</string>
    <string name="TimeStampTitle">Timestamp:</string>
    <string name="OrderIDTitle">OrderID:</string>
    <string name="NotifiersPair">Pair</string>
    <string name="TypeTitle">Type:</string>
    <string name="AmountTitle">Amount:</string>
    <string name="WaitingForData">WAITING FOR DATA</string>
    <string name="RateTitle">Rate:</string>
    <string name="ValueTitle">Value:</string>
    <string name="Price">Price</string>
    <string name="Currency">Currency</string>
    <string name="Amount">Amount</string>
    <string name="UpdateButton">UPDATE</string>
    <string name="BuyButton">BUY</string>
    <string name="SellButton">SELL</string>
    <string name="DescriptionTitle">Description:</string>
    <string name="RemoveOrder">Remove order</string>
    <string name="AddMenu">Add</string>
    <string name="RefreshMenu">Refresh</string>
    <string name="HelpRateAppButtonTitle">RATE APP ON PLAY STORE</string>
    <string name="HelpSendFeedbackButtonTitle">SEND FEEDBACK</string>
    <string name="tickerDashboardBackHighTitle">High:</string>
    <string name="tickerDashboardBackLowTitle">Low:</string>
    <string name="tickerDashboardBackBuyTitle">Buy:</string>
    <string name="tickerDashboardBackSellTitle">Sell:</string>
    <string name="NoPairsToShow">NO PAIRS TO SHOW</string>
    <string name="CheckPeriodSummary">Current check period: N/A</string>
    <string name="APIKeyDefaultText">enter key</string>
    <string name="APISecretDefaultText">enter secret</string>
    <string name="UseMirror">Use btc-e.nz</string>
    <string name="apprate_title">Rate %s</string>
    <string name="apprate_rate_action">Rate</string>
    <string name="apprate_dont_show_again_button">No, thanks</string>
    <string name="apprate_remind_later_button">Later</string>
    <string name="apprate_text">If you enjoy using %s please take a moment to rate it. Thanks for your support!</string>
    <string name="order_deleted_successfully">Order was deleted successfully</string>
    <string name="order_delete_question">Are you sure you want to delete order with id=%d?</string>
    <string name="no_items_text">No items</string>
    <string name="no_charts_text">NO CHARTS</string>
    <string name="no_connection_text">No connection</string>
    <string name="periodic_check_title">Periodic check</string>
    <string name="check_period_option">Check period</string>
    <string name="no_key_secret_error">No key/secret provided</string>
    <string name="charts">Charts</string>
    <string name="use_old_charts">Use BTC-e old charts</string>
    <string name="use_btce_charts_description">Less features, but faster</string>
    <string name="order_successfully_added">Order was successfully added</string>
    <string name="buy_confirmation">Buy &lt;b>%1$s %2$s&lt;/b> (you\'ll get &lt;b>%3$s %4$s&lt;/b>, fee = &lt;b>%5$s %6$s&lt;/b>) with price &lt;b>%7$s %8$s&lt;/b> per 1 &lt;b>%9$s&lt;/b>? Total cost is: &lt;b>%10$s  %11$s&lt;/b></string>
    <string name="sell_confirmation">Sell &lt;b>%1$s %2$s&lt;/b> with price &lt;b>%3$s %4$s&lt;/b> per 1 &lt;b>%5$s&lt;/b>? You\'ll get &lt;b>%6$s %7$s&lt;/b> (after excluding fee = &lt;b>%8$s %9$s&lt;/b>)</string>
    <string name="missing_mandatory_fields_error">Missing mandatory fields</string>
    <string name="trade_operation_cost">Total to spend (if buy)/to get (if sell): &lt;b>%1$s %2$s&lt;/b></string>
    <string name="tokens">Tokens</string>
    <string name="exchange_sync_failed">Failed to sync with exchange</string>
    <string name="msg_syncing_with_exchange">Syncing with exchange</string>
    <string name="settings_api_category_title">API Key</string>
    <string name="settings_sync_exchange_summary">Synchronize pairs available in the app with current state of exchange</string>
    <string name="settings_sync_exchange_title">Sync exchange pairs</string>
    <string name="settings_exchange_url_title">Exchange URL</string>
    <string name="settings_exchange_category_title">Exchange</string>
    <string name="settings_exchange_url_default" translatable="false">https://wex.nz</string>
    <string name="settings_other_section">Other</string>
    <string name="settings_dont_show_zero_funds_title">Don\'t show zero funds</string>
    <string name="settings_dont_show_zero_funds_summary">Don\'t show zero balances in the My Funds section</string>
    <string name="settings_pin_protection_title">PIN protection</string>
    <string name="exchange_url_no_https_warning">New value doesn\'t have "https://" protocol specified. Do you want to proceed?</string>
    <string name="language">Language</string>
    <string name="chat_readonly_warning">Chat is working in read-only mode</string>
    <string name="chat_linkify_warning">Warning: do not trust links in chat, it may contain malware content</string>
    <string name="settings_chat_category_title">Chat</string>
    <string name="settings_key_api_key" translatable="false">API_Key</string>
    <string name="settings_key_api_secret" translatable="false">API_Secret</string>
    <string name="settings_key_check_enabled" translatable="false">check_enabled</string>
    <string name="settings_key_check_period" translatable="false">check_period</string>
    <string name="settings_key_sync_exchange_pairs" translatable="false">sync_exchange_pairs</string>
    <string name="settings_key_exchange_url" translatable="false">exchange_url</string>
</resources>