<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="API Key">
        <com.QuarkLabs.BTCeClient.EncryptedEditTextPreference
            android:hint="@string/APIKeyDefaultText"
            android:key="@string/settings_key_api_key"
            android:singleLine="true"
            android:title="@string/KeyTitle" />

        <com.QuarkLabs.BTCeClient.EncryptedEditTextPreference
            android:hint="@string/APISecretDefaultText"
            android:key="@string/settings_key_api_secret"
            android:singleLine="true"
            android:title="@string/SettingsSecretTitle" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/periodic_check_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_key_check_enabled"
            android:title="@string/EnableRecurrentCheck" />
        <ListPreference
            android:defaultValue="@string/period_default_value"
            android:dependency="check_enabled"
            android:dialogTitle="@string/ChoosePeriod"
            android:entries="@array/Periods"
            android:entryValues="@array/PeriodsInMsecs"
            android:key="@string/settings_key_check_period"
            android:summary="@string/CheckPeriodSummary"
            android:title="@string/check_period_option" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Exchange">
        <Preference
            android:key="@string/settings_key_sync_exchange_pairs"
            android:summary="@string/settings_sync_exchange_summary"
            android:title="@string/settings_sync_exchange_title" />
        <com.QuarkLabs.BTCeClient.NoSpaceEditTextPreference
            android:defaultValue="@string/settings_exchange_url_default"
            android:key="@string/settings_key_exchange_url"
            android:singleLine="true"
            android:title="@string/settings_exchange_url_title" />
    </PreferenceCategory>
    <!--<PreferenceCategory
        android:key="charts"
        android:title="@string/charts">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_btce_charts"
            android:hint="@string/use_btce_charts_description"
            android:title="@string/use_old_charts"/>
    </PreferenceCategory>-->

</PreferenceScreen>