<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@drawable/widget_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widgetPair"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/PairTitleWidget"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/widgetCurrencyValue"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/NATitle"
        android:textColor="#00ff00" />

    <TextView
        android:id="@+id/widgetDate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/DateTitle"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="12sp" />
</LinearLayout>