<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:focusableInTouchMode="true"
        android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/NotifyMeOn"
                android:id="@+id/textView" android:layout_weight="1"
                android:gravity="center_vertical"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/TypeSpinner"
                android:entries="@array/WatcherTypes" android:layout_weight="1"/>


    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/NotifiersPair"
                android:id="@+id/textView2"
                android:singleLine="false" android:layout_weight="1"
                android:gravity="center_vertical"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/PairSpinner"
                android:entries="@array/ExchangePairs" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ValueTitle"
                android:id="@+id/ValueTitle"
                android:singleLine="false" android:layout_weight="1"
                android:gravity="center_vertical"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:id="@+id/NotifValue" android:text="@string/ZeroFloatValue"
                android:layout_weight="1"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NotifDescription"
            android:gravity="center" android:textSize="16sp"
            android:text="@string/PanicSellDescription" android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="8dp"/>
</LinearLayout>
