<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:stretchColumns="1,3"
             android:shrinkColumns="1"
             android:background="@drawable/bg_card"
             android:layout_marginTop="8dp"
             android:baselineAligned="false">

    <TableRow android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/tableRow">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/PairTitle"
                  android:layout_column="0"
                  android:textColor="@android:color/primary_text_light"
                  android:textStyle="bold"
                  android:layout_marginRight="8dp"
                  android:layout_marginEnd="8dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/PlaceholderText"
                  android:id="@+id/TradeHistoryPair"
                  android:layout_column="1"
                  android:textColor="@android:color/primary_text_light"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AmountTitle"
                android:layout_column="0"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlaceholderText"
                android:id="@+id/TradeHistoryAmount"
                android:layout_column="1"
                android:textColor="@android:color/primary_text_light"/>

    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RateTitle"
                android:layout_column="0"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlaceholderText"
                android:id="@+id/TradeHistoryRate"
                android:layout_column="1"
                android:textColor="@android:color/primary_text_light"/>

    </TableRow>

    <TableRow android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/tableRow2">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/TypeTitle"
                  android:layout_column="0"
                  android:textColor="@android:color/primary_text_light"
                  android:textStyle="bold"
                  android:layout_marginRight="8dp"
                  android:layout_marginEnd="8dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/PlaceholderText"
                  android:id="@+id/TradeHistoryType"
                  android:layout_column="1"
                  android:textColor="@android:color/primary_text_light"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OrderIDTitle"
                android:layout_column="0"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlaceholderText"
                android:id="@+id/TradeHistoryOrderID"
                android:layout_column="1"
                android:textColor="@android:color/primary_text_light"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TimeStampTitle"
                android:layout_column="0"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlaceholderText"
                android:id="@+id/TradeHistoryTimestamp"
                android:layout_column="1"
                android:textColor="@android:color/primary_text_light"/>
    </TableRow>

</TableLayout>
